add BAPI endpoint section to each page

--- a/docs/references/backend/client/get-client.mdx
+++ b/docs/references/backend/client/get-client.mdx
@@ -38,3 +38,7 @@ _Client {
 }
 */
 ```
+
+## Backend API (BAPI) endpoint
+
+This method in the SDK is a wrapper around the BAPI endpoint `GET/clients/{client_id}`. See the [BAPI reference](https://clerk.com/docs/reference/backend-api/tag/Clients#operation/GetClient) for more details.
