--- a/docs/references/backend/client/verify-client.mdx
+++ b/docs/references/backend/client/verify-client.mdx
@@ -24,3 +24,7 @@ const token = 'my-session-token';
 
 const response = await clerkClient.clients.verifyClient(token);
 ```
+
+## Backend API (BAPI) endpoint
+
+This method in the SDK is a wrapper around the BAPI endpoint `GET/clients/verify`. See the [BAPI reference](https://clerk.com/docs/reference/backend-api/tag/Clients#operation/VerifyClient) for more details.
