--- a/docs/references/backend/invitations/create-invitation.mdx
+++ b/docs/references/backend/invitations/create-invitation.mdx
@@ -48,3 +48,7 @@ _Invitation {
 }
 */
 ```
+
+## Backend API (BAPI) endpoint
+
+This method in the SDK is a wrapper around the BAPI endpoint `POST/invitations`. See the [BAPI reference](https://clerk.com/docs/reference/backend-api/tag/Invitations#operation/CreateInvitation) for more details.
