--- a/docs/references/backend/invitations/get-invitation-list.mdx
+++ b/docs/references/backend/invitations/get-invitation-list.mdx
@@ -69,3 +69,7 @@ console.log(response);
 }
 */
 ```
+
+## Backend API (BAPI) endpoint
+
+This method in the SDK is a wrapper around the BAPI endpoint `GET/invitations`. See the [BAPI reference](https://clerk.com/docs/reference/backend-api/tag/Invitations#operation/ListInvitations) for more details.
