--- a/docs/references/backend/organization/create-organization.mdx
+++ b/docs/references/backend/organization/create-organization.mdx
@@ -49,3 +49,7 @@ _Organization {
 }
 */
 ```
+
+## Backend API (BAPI) endpoint
+
+This method in the SDK is a wrapper around the BAPI endpoint `POST/organizations`. See the [BAPI reference](https://clerk.com/docs/reference/backend-api/tag/Organizations#operation/CreateOrganization) for more details.
