--- a/docs/references/backend/organization/get-organization-list.mdx
+++ b/docs/references/backend/organization/get-organization-list.mdx
@@ -25,6 +25,8 @@ function getOrganizationList: (params: GetOrganizationListParams) => Promise<Pag
 
 In this example, you can see that the returned [`PaginatedResourceResponse`](/docs/references/backend/types/paginated-resource-response) includes `data`, which is an array of [`Organization`](/docs/references/javascript/organization/organization) objects, and `totalCount`, which indicates the total number of organizations in the system.
 
+While the response can return up to 10 data items, for the sake of brevity, only two are shown in this example response.
+
 ```tsx
 const response = await clerkClient.organizations.
 getOrganizationList();
@@ -63,126 +65,7 @@ console.log(response);
       adminDeleteEnabled: true,
       members_count: undefined
     },
-    _Organization {
-      id: 'org_2b4OVfkNf7lJzPW6LFhO5RX4mlX',
-      name: 'johnny',
-      slug: 'johnny',
-      imageUrl: 'https://img.clerk.com/eyJ0eXBlIjoiZGVmYXVsdCIsImlpZCI6Imluc18yVjdKRFdyclJwRmZFZTlqQUM2dWpSMG8xSlQiLCJyaWQiOiJvcmdfMmI0T1Zma05mN2xKelBXNkxGaE81Ulg0bWxYIiwiaW5pdGlhbHMiOiJKIn0',
-      hasImage: false,
-      createdBy: 'user_2b4OR5UgD9sncxTqaL6FnVUG0kj',
-      createdAt: 1705470909254,
-      updatedAt: 1705470909254,
-      publicMetadata: {},
-      privateMetadata: {},
-      maxAllowedMemberships: 3,
-      adminDeleteEnabled: true,
-      members_count: undefined
-    },
-    _Organization {
-      id: 'org_2aytru60IoPyS4FUu0To9kZFV2x',
-      name: 'John Stewart',
-      slug: 'john-stewart',
-      imageUrl: 'https://img.clerk.com/eyJ0eXBlIjoiZGVmYXVsdCIsImlpZCI6Imluc18yVjdKRFdyclJwRmZFZTlqQUM2dWpSMG8xSlQiLCJyaWQiOiJvcmdfMmF5dHJ1NjBJb1B5UzRGVXUwVG85a1pGVjJ4IiwiaW5pdGlhbHMiOiJKIn0',
-      hasImage: false,
-      createdBy: 'user_2aytpVZF5n7lBJyCx1Pbu9IFao8',
-      createdAt: 1705302848456,
-      updatedAt: 1705302848456,
-      publicMetadata: {},
-      privateMetadata: {},
-      maxAllowedMemberships: 3,
-      adminDeleteEnabled: true,
-      members_count: undefined
-    },
-    _Organization {
-      id: 'org_2atFUirXSDre2w1HOnNSgIiZmmv',
-      name: 'stud',
-      slug: 'stud',
-      imageUrl: 'https://img.clerk.com/eyJ0eXBlIjoiZGVmYXVsdCIsImlpZCI6Imluc18yVjdKRFdyclJwRmZFZTlqQUM2dWpSMG8xSlQiLCJyaWQiOiJvcmdfMmF0RlVpclhTRHJlMncxSE9uTlNnSWlabW12IiwiaW5pdGlhbHMiOiJTIn0',
-      hasImage: false,
-      createdBy: 'user_2atFNMqfXKqec8D5wQXt8bh10Gn',
-      createdAt: 1705129985702,
-      updatedAt: 1705129985702,
-      publicMetadata: {},
-      privateMetadata: {},
-      maxAllowedMemberships: 3,
-      adminDeleteEnabled: true,
-      members_count: undefined
-    },
-    _Organization {
-      id: 'org_2ao3c9Htp1Pzui3t3wKtMCWuzaD',
-      name: 'Can Expect',
-      slug: 'can-expect',
-      imageUrl: 'https://img.clerk.com/eyJ0eXBlIjoiZGVmYXVsdCIsImlpZCI6Imluc18yVjdKRFdyclJwRmZFZTlqQUM2dWpSMG8xSlQiLCJyaWQiOiJvcmdfMmFvM2M5SHRwMVB6dWkzdDN3S3RNQ1d1emFEIiwiaW5pdGlhbHMiOiJDIn0',
-      hasImage: false,
-      createdBy: 'user_2ao3WfjIxQZviuv4O23TKIB2d9H',
-      createdAt: 1704971180274,
-      updatedAt: 1704971180274,
-      publicMetadata: {},
-      privateMetadata: {},
-      maxAllowedMemberships: 3,
-      adminDeleteEnabled: true,
-      members_count: undefined
-    },
-    _Organization {
-      id: 'org_2anxPcJjC0qc5KYZ7AxQ9LyYhIu',
-      name: 'test-org2',
-      slug: 'test-org2',
-      imageUrl: 'https://img.clerk.com/eyJ0eXBlIjoiZGVmYXVsdCIsImlpZCI6Imluc18yVjdKRFdyclJwRmZFZTlqQUM2dWpSMG8xSlQiLCJyaWQiOiJvcmdfMmFueFBjSmpDMHFjNUtZWjdBeFE5THlZaEl1IiwiaW5pdGlhbHMiOiJUIn0',
-      hasImage: false,
-      createdBy: 'user_2anuhQUGG4mODptsZQBZMCksSZz',
-      createdAt: 1704968120849,
-      updatedAt: 1704968120849,
-      publicMetadata: {},
-      privateMetadata: {},
-      maxAllowedMemberships: 3,
-      adminDeleteEnabled: true,
-      members_count: undefined
-    },
-    _Organization {
-      id: 'org_2anukRUlhHEiSkCdWGj6y1wYfBY',
-      name: 'test org',
-      slug: 'test-org',
-      imageUrl: 'https://img.clerk.com/eyJ0eXBlIjoiZGVmYXVsdCIsImlpZCI6Imluc18yVjdKRFdyclJwRmZFZTlqQUM2dWpSMG8xSlQiLCJyaWQiOiJvcmdfMmFudWtSVWxoSEVpU2tDZFdHajZ5MXdZZkJZIiwiaW5pdGlhbHMiOiJUIn0',
-      hasImage: false,
-      createdBy: 'user_2anuhQUGG4mODptsZQBZMCksSZz',
-      createdAt: 1704966806306,
-      updatedAt: 1704966806306,
-      publicMetadata: {},
-      privateMetadata: {},
-      maxAllowedMemberships: 3,
-      adminDeleteEnabled: true,
-      members_count: undefined
-    },
-    _Organization {
-      id: 'org_2alk2WvUg3gLlz58nWnn7fDsigS',
-      name: 'test',
-      slug: 'testasdfasdasdf',
-      imageUrl: 'https://img.clerk.com/eyJ0eXBlIjoiZGVmYXVsdCIsImlpZCI6Imluc18yVjdKRFdyclJwRmZFZTlqQUM2dWpSMG8xSlQiLCJyaWQiOiJvcmdfMmFsazJXdlVnM2dMbHo1OG5Xbm43ZkRzaWdTIiwiaW5pdGlhbHMiOiJUIn0',
-      hasImage: false,
-      createdBy: 'user_2aljzdKeBo51ICm9zN2qgP1erF4',
-      createdAt: 1704900346050,
-      updatedAt: 1704900346050,
-      publicMetadata: {},
-      privateMetadata: {},
-      maxAllowedMemberships: 3,
-      adminDeleteEnabled: true,
-      members_count: undefined
-    },
-    _Organization {
-      id: 'org_2afgibl60XL0CFSij7lhiGAQM9J',
-      name: 'gfgfgfgfgfg',
-      slug: 'gfgfgfgfgfg',
-      imageUrl: 'https://img.clerk.com/eyJ0eXBlIjoiZGVmYXVsdCIsImlpZCI6Imluc18yVjdKRFdyclJwRmZFZTlqQUM2dWpSMG8xSlQiLCJyaWQiOiJvcmdfMmFmZ2libDYwWEwwQ0ZTaWo3bGhpR0FRTTlKIiwiaW5pdGlhbHMiOiJHIn0',
-      hasImage: false,
-      createdBy: 'user_2afgdXqXG2d2o4d3Iabd23inuN0',
-      createdAt: 1704715175001,
-      updatedAt: 1704715175001,
-      publicMetadata: {},
-      privateMetadata: {},
-      maxAllowedMemberships: 3,
-      adminDeleteEnabled: true,
-      members_count: undefined
-    }
+    ...
   ],
   totalCount: 25,
 }
@@ -219,3 +102,7 @@ Retrieves list of organizations that match the query.
 // returns organizations that have 'test' in their name
 const { data, totalCount } = await clerkClient.organizations.getOrganizationList({ query: 'test' })
 ```
+
+## Backend API (BAPI) endpoint
+
+This method in the SDK is a wrapper around the BAPI endpoint `GET/organizations`. See the [BAPI reference](https://clerk.com/docs/reference/backend-api/tag/Organizations#operation/ListOrganizations) for more details.
