--- a/docs/references/backend/organization/get-organization.mdx
+++ b/docs/references/backend/organization/get-organization.mdx
@@ -55,3 +55,7 @@ const slug = 'my-organization-slug';
 
 const response = await clerkClient.organizations.getOrganization({ slug });
 ```
+
+## Backend API (BAPI) endpoint
+
+This method in the SDK is a wrapper around the BAPI endpoint `GET/organizations/{organization_id}`. See the [BAPI reference](https://clerk.com/docs/reference/backend-api/tag/Organizations#operation/GetOrganization) for more details.
