--- a/docs/references/backend/phone-numbers/create-phone-number.mdx
+++ b/docs/references/backend/phone-numbers/create-phone-number.mdx
@@ -49,3 +49,7 @@ _PhoneNumber {
 }
 */
 ```
+
+## Backend API (BAPI) endpoint
+
+This method in the SDK is a wrapper around the BAPI endpoint `POST/phone_numbers`. See the [BAPI reference](https://clerk.com/docs/reference/backend-api/tag/Phone-Numbers#operation/CreatePhoneNumber) for more details.
