--- a/docs/references/backend/user/create-user.mdx
+++ b/docs/references/backend/user/create-user.mdx
@@ -74,3 +74,7 @@ _User {
 }
 */
 ```
+
+## Backend API (BAPI) endpoint
+
+This method in the SDK is a wrapper around the BAPI endpoint `POST/users`. See the [BAPI reference](https://clerk.com/docs/reference/backend-api/tag/Users#operation/CreateUser) for more details.
