--- a/docs/references/backend/user/get-organization-membership-list.mdx
+++ b/docs/references/backend/user/get-organization-membership-list.mdx
@@ -87,3 +87,7 @@ const { data, totalCount } = await clerkClient.users.getOrganizationMembershipLi
   offset: 10,
 });
 ```
+
+## Backend API (BAPI) endpoint
+
+This method in the SDK is a wrapper around the BAPI endpoint `GET/users/{user_id}/organization_memberships`. See the [BAPI reference](https://clerk.com/docs/reference/backend-api/tag/Users#operation/UsersGetOrganizationMemberships) for more details.
