--- a/docs/references/backend/user/get-user-list.mdx
+++ b/docs/references/backend/user/get-user-list.mdx
@@ -113,3 +113,7 @@ const { data, totalCount } = await clerkClient.users.getUserList({
   query: 'test',
 });
 ```
+
+## Backend API (BAPI) endpoint
+
+This method in the SDK is a wrapper around the BAPI endpoint `GET/users`. See the [BAPI reference](https://clerk.com/docs/reference/backend-api/tag/Users#operation/GetUserList) for more details.
