--- a/docs/references/backend/user/update-user-metadata.mdx
+++ b/docs/references/backend/user/update-user-metadata.mdx
@@ -95,4 +95,6 @@ _User {
 */
 ```
 
-In this example, you can see that the returned `User` object has has its `publicMetadata` property updated with the new metadata that was provided.
+## Backend API (BAPI) endpoint
+
+This method in the SDK is a wrapper around the BAPI endpoint `PATCH/users/{user_id}/metadata`. See the [BAPI reference](https://clerk.com/docs/reference/backend-api/tag/Users#operation/UpdateUserMetadata) for more details.
