--- a/docs/references/backend/user/update-user.mdx
+++ b/docs/references/backend/user/update-user.mdx
@@ -172,3 +172,7 @@ _User {
   ```
   </Tab>
 </Tabs>
+
+## Backend API (BAPI) endpoint
+
+This method in the SDK is a wrapper around the BAPI endpoint `PATCH/users/{user_id}`. See the [BAPI reference](https://clerk.com/docs/reference/backend-api/tag/Users#operation/UpdateUser) for more details.
