--- a/docs/references/backend/user/verify-password.mdx
+++ b/docs/references/backend/user/verify-password.mdx
@@ -31,3 +31,7 @@ console.log(response);
 { verified: true }
 */
 ```
+
+## Backend API (BAPI) endpoint
+
+This method in the SDK is a wrapper around the BAPI endpoint `DELETE/users/{user_id}/verify_password`. See the [BAPI reference](https://clerk.com/docs/reference/backend-api/tag/Users#operation/VerifyPassword) for more details.
