--- a/docs/references/backend/allowlist/create-allowlist-identifier.mdx
+++ b/docs/references/backend/allowlist/create-allowlist-identifier.mdx
@@ -37,3 +37,7 @@ _AllowlistIdentifier {
 }
 */
 ```
+
+## Backend API (BAPI) endpoint
+
+This method in the SDK is a wrapper around the BAPI endpoint `POST/allowlist-identifiers`. See the [BAPI reference](https://clerk.com/docs/reference/backend-api/tag/Allow-list-Block-list#operation/CreateAllowlistIdentifier) for more details.
