--- a/docs/references/backend/allowlist/delete-allowlist-identifier.mdx
+++ b/docs/references/backend/allowlist/delete-allowlist-identifier.mdx
@@ -34,3 +34,7 @@ DeletedObject {
 }
 */
 ```
+
+## Backend API (BAPI) endpoint
+
+This method in the SDK is a wrapper around the BAPI endpoint `DELETE/allowlist-identifiers/{identifier_id}`. See the [BAPI reference](https://clerk.com/docs/reference/backend-api/tag/Allow-list-Block-list#operation/DeleteAllowlistIdentifier) for more details.
