--- a/docs/references/backend/email-addresses/create-email-address.mdx
+++ b/docs/references/backend/email-addresses/create-email-address.mdx
@@ -47,3 +47,7 @@ _EmailAddress {
 }
 */
 ```
+
+## Backend API (BAPI) endpoint
+
+This method in the SDK is a wrapper around the BAPI endpoint `POST/email_addresses`. See the [BAPI reference](https://clerk.com/docs/reference/backend-api/tag/Email-Addresses#operation/CreateEmailAddress) for more details.
