--- a/docs/references/backend/email-addresses/delete-email-address.mdx
+++ b/docs/references/backend/email-addresses/delete-email-address.mdx
@@ -34,3 +34,7 @@ _DeletedObject {
 }
 */
 ```
+
+## Backend API (BAPI) endpoint
+
+This method in the SDK is a wrapper around the BAPI endpoint `DELETE/email_addresses/{email_address_id}`. See the [BAPI reference](https://clerk.com/docs/reference/backend-api/tag/Email-Addresses#operation/DeleteEmailAddress) for more details.
