--- a/docs/references/backend/email-addresses/get-email-address.mdx
+++ b/docs/references/backend/email-addresses/get-email-address.mdx
@@ -46,3 +46,7 @@ _EmailAddress {
 }
 */
 ```
+
+## Backend API (BAPI) endpoint
+
+This method in the SDK is a wrapper around the BAPI endpoint `GET/email_addresses/{email_address_id}`. See the [BAPI reference](https://clerk.com/docs/reference/backend-api/tag/Email-Addresses#operation/GetEmailAddress) for more details.
