--- a/docs/references/backend/email-addresses/update-email-address.mdx
+++ b/docs/references/backend/email-addresses/update-email-address.mdx
@@ -64,3 +64,7 @@ _EmailAddress {
 ```
 
 As you can see in the response, the email address is now unverified.
+
+## Backend API (BAPI) endpoint
+
+This method in the SDK is a wrapper around the BAPI endpoint `PATCH/email_addresses/{email_address_id}`. See the [BAPI reference](https://clerk.com/docs/reference/backend-api/tag/Email-Addresses#operation/UpdateEmailAddress) for more details.
