--- a/docs/references/backend/organization/get-organization-membership-list.mdx
+++ b/docs/references/backend/organization/get-organization-membership-list.mdx
@@ -87,3 +87,7 @@ const { data, totalCount } = await clerkClient.organizations.getOrganizationMemb
   offset: 10,
 });
 ```
+
+## Backend API (BAPI) endpoint
+
+This method in the SDK is a wrapper around the BAPI endpoint `GET/organizations/{organization_id}/memberships`. See the [BAPI reference](https://clerk.com/docs/reference/backend-api/tag/Organization-Memberships#operation/ListOrganizationMemberships) for more details.
