--- a/docs/references/backend/organization/revoke-organization-invitation.mdx
+++ b/docs/references/backend/organization/revoke-organization-invitation.mdx
@@ -47,3 +47,7 @@ _OrganizationInvitation {
 }
 */
 ```
+
+## Backend API (BAPI) endpoint
+
+This method in the SDK is a wrapper around the BAPI endpoint `POST/organizations/{organization_id}/invitations/{invitation_id}/revoke`. See the [BAPI reference](https://clerk.com/docs/reference/backend-api/tag/Organization-Invitations#operation/RevokeOrganizationInvitation) for more details.
