--- a/docs/references/backend/organization/update-organization.mdx
+++ b/docs/references/backend/organization/update-organization.mdx
@@ -51,3 +51,7 @@ _Organization {
 }
 */
 ```
+
+## Backend API (BAPI) endpoint
+
+This method in the SDK is a wrapper around the BAPI endpoint `PATCH/organizations/{organization_id}`. See the [BAPI reference](https://clerk.com/docs/reference/backend-api/tag/Organizations#operation/UpdateOrganization) for more details.
