--- a/docs/references/backend/phone-numbers/delete-phone-number.mdx
+++ b/docs/references/backend/phone-numbers/delete-phone-number.mdx
@@ -34,3 +34,7 @@ _DeletedObject {
 }
 */
 ```
+
+## Backend API (BAPI) endpoint
+
+This method in the SDK is a wrapper around the BAPI endpoint `DELETE/phone_numbers/{phone_number_id}`. See the [BAPI reference](https://clerk.com/docs/reference/backend-api/tag/Phone-Numbers#operation/DeletePhoneNumber) for more details.
