--- a/docs/references/backend/phone-numbers/get-phone-number.mdx
+++ b/docs/references/backend/phone-numbers/get-phone-number.mdx
@@ -43,3 +43,7 @@ _PhoneNumber {
 }
 */
 ```
+
+## Backend API (BAPI) endpoint
+
+This method in the SDK is a wrapper around the BAPI endpoint `GET/phone_numbers/{phone_number_id}`. See the [BAPI reference](https://clerk.com/docs/reference/backend-api/tag/Phone-Numbers#operation/GetPhoneNumber) for more details.
