--- a/docs/references/backend/phone-numbers/update-phone-number.mdx
+++ b/docs/references/backend/phone-numbers/update-phone-number.mdx
@@ -63,3 +63,7 @@ _PhoneNumber {
 ```
 
 As you can see in the response, the phone number is now unverified.
+
+## Backend API (BAPI) endpoint
+
+This method in the SDK is a wrapper around the BAPI endpoint `PATCH/phone_numbers/{phone_number_id}`. See the [BAPI reference](https://clerk.com/docs/reference/backend-api/tag/Phone-Numbers#operation/UpdatePhoneNumber) for more details.
