--- a/docs/references/backend/redirect-urls/create-redirect-url.mdx
+++ b/docs/references/backend/redirect-urls/create-redirect-url.mdx
@@ -34,3 +34,7 @@ _RedirectUrl {
 }
 */
 ```
+
+## Backend API (BAPI) endpoint
+
+This method in the SDK is a wrapper around the BAPI endpoint `POST/redirect_urls`. See the [BAPI reference](https://clerk.com/docs/reference/backend-api/tag/Redirect-URLs#operation/CreateRedirectURL) for more details.
