--- a/docs/references/backend/redirect-urls/get-redirect-url-list.mdx
+++ b/docs/references/backend/redirect-urls/get-redirect-url-list.mdx
@@ -33,3 +33,7 @@ console.log(response);
 }
 */
 ```
+
+## Backend API (BAPI) endpoint
+
+This method in the SDK is a wrapper around the BAPI endpoint `GET/redirect_urls/{id}`. See the [BAPI reference](https://clerk.com/docs/reference/backend-api/tag/Redirect-URLs#operation/ListRedirectURLs) for more details.
