--- a/docs/references/backend/user/delete-user.mdx
+++ b/docs/references/backend/user/delete-user.mdx
@@ -34,3 +34,7 @@ _DeletedObject {
 }
 */
 ```
+
+## Backend API (BAPI) endpoint
+
+This method in the SDK is a wrapper around the BAPI endpoint `DELETE/users/{user_id}`. See the [BAPI reference](https://clerk.com/docs/reference/backend-api/tag/Users#operation/DeleteUser) for more details.
