--- a/docs/references/backend/user/disable-user-mfa.mdx
+++ b/docs/references/backend/user/disable-user-mfa.mdx
@@ -29,3 +29,7 @@ console.log(response);
 { user_id: 'user_2bxfCJOe0Ocd8DNe9hFN3EXvfOu' }
 */
 ```
+
+## Backend API (BAPI) endpoint
+
+This method in the SDK is a wrapper around the BAPI endpoint `DELETE/users/{user_id}/mfa`. See the [BAPI reference](https://clerk.com/docs/reference/backend-api/tag/Users#operation/DisableMFA) for more details.
