--- a/docs/references/backend/user/get-count.mdx
+++ b/docs/references/backend/user/get-count.mdx
@@ -47,3 +47,7 @@ This example retrieves the total number of users matching the query `test`.
 ```tsx
 const response = await clerkClient.users.getCount({ query: 'test' })
 ```
+
+## Backend API (BAPI) endpoint
+
+This method in the SDK is a wrapper around the BAPI endpoint `GET/users/count`. See the [BAPI reference](https://clerk.com/docs/reference/backend-api/tag/Users#operation/GetUsersCount) for more details.
