--- a/docs/guides/nextauth-migration.mdx
+++ b/docs/guides/nextauth-migration.mdx
@@ -4,7 +4,16 @@ description: Migrating from NextAuth.js
 ---
 
 <TutorialHero
-  framework="next"
+  framework="authjs"
+  exampleRepoTitle="Migration Script Repository"
+  exampleRepo={[ 
+    {
+      title: "Migration Script",
+      link: "https://github.com/clerk/migration-script"
+      
+    }
+  ]}
+
   beforeYouStart={[
     {
       title: "Set up a Clerk application",
@@ -64,7 +73,9 @@ CLERK_SECRET_KEY={{secret}}
 
 ### Wrap your Next.js app in `<ClerkProvider />`
 
-#### Remove your NextAuth.js `<SessionProvider />`
+You will remove the provider from NextAuth.js and replace it with the `<ClerkProvider />` provider from Clerk. This will need to wrap your application, or wrap the portion of your app where you want to handle authenication. 
+
+1. Remove your NextAuth.js `<SessionProvider />`
 
 Replace `<SessionProvider session={session}>` with `<ClerkProvider>` if you are using App Router or `<ClerkProvider {...pageProps}>` if you are using Pages Router.
 
@@ -85,7 +96,7 @@ export default function App({
 }
 ```
 
-#### Add `<ClerkProvider />` to your root `layout.tsx` file
+2.  Add `<ClerkProvider />` to your root `layout.tsx` file
 
 <CodeBlockTabs type="installer" options={["App Router", "Pages Router"]}>
 
@@ -145,14 +156,14 @@ For fully custom UI, replace the existing functionality with [appropriate custom
 
 You will need to remove the NextAuth.js Middleware from your application, and replace it with the Clerk Middleware helper. NextAuth's middleware always rejects unauthorized requests. You may have additionally configured the Next.js middleware config to protect specific private routes. You will need to make note of this configuration so you can recreate it.
 
-##### Remove the NextAuth.js Middleware
+1. Remove the NextAuth.js Middleware
 
 ```tsx filename="middleware.ts"
 export { default } from "next-auth/middleware"
 
 export const config = { matcher: [/** private routes */] }
 ```
-##### Add Clerk's `authMiddleware()`
+2. Add Clerk's `authMiddleware()`
 
 The example below is the starting Middleware configuration. Please read the [`authMiddleware()`](/docs/references/nextjs/auth-middleware) documentation to learn how to configuration your Middleware. Clerk's Middleware will, by default, run for your entire application and gives you fine-grained control over handling the authenticated state. 
 
@@ -169,7 +180,7 @@ export const config = {
 };
 ```
 
-##### Use Clerk's control components to control access
+3. Use Clerk's control components to control access
 
 To conditionally render UI when the user is signed in, wrap it with [`<SignedIn>`](/docs/components/control/signed-in).
 
