Renamed file, updated manifest, added Overview

--- a/docs/guides/authjs-migration.mdx
+++ b/docs/guides/authjs-migration.mdx
@@ -1,6 +1,6 @@
 ---
-title: Migrating to Clerk from NextAuth.js
-description: Migrating from NextAuth.js
+title: Migrating to Clerk from Auth.js
+description: Migrating from Auth.js
 ---
 
 <TutorialHero
@@ -35,7 +35,7 @@ description: Migrating from NextAuth.js
 
 </TutorialHero>
 
-This guide shows how to migrate an application using NextAuth.js to use Clerk for authentication.
+This guide shows how to migrate an application using Auth.js (formerly NextAuth.js) to use Clerk for authentication.
 
 <Steps>
 
@@ -73,14 +73,14 @@ CLERK_SECRET_KEY={{secret}}
 
 ### Wrap your Next.js app in `<ClerkProvider />`
 
-You will remove the provider from NextAuth.js and replace it with the `<ClerkProvider />` provider from Clerk. This will need to wrap your application, or wrap the portion of your app where you want to handle authenication. 
+You will remove the provider from Auth.js and replace it with the `<ClerkProvider />` provider from Clerk. This will need to wrap your application, or wrap the portion of your app where you want to handle authenication. 
 
-1. Remove your NextAuth.js `<SessionProvider />`
+1. Remove your Auth.js `<SessionProvider />`
 
 Replace `<SessionProvider session={session}>` with `<ClerkProvider>` if you are using App Router or `<ClerkProvider {...pageProps}>` if you are using Pages Router.
 
 ```tsx filename="_app.tsx"
-// With NextAuth.js
+// With Auth.js
 
 import { SessionProvider } from "next-auth/react"
 
@@ -140,7 +140,7 @@ export default MyApp;
 
 Account Portal is the fastest way to authenticate your app. Clerk's Account Portal hosts the `<SignIn />`, `<SignUp />`, `<UserProfile />`, and other components for your application. Read more about [Account Portal](/docs/account-portal/getting-started). 
 
-To use the Account Portal, remove the routes that mount the NextAuth.js sign-in and sign-up UI. Replace the links to those routes with the [`<SignInButton>`](/docs/components/unstyled/sign-in-button) or [`<SignUpButton>`](/docs/components/unstyled/sign-out-button) components.
+To use the Account Portal, remove the routes that mount the Auth.js sign-in and sign-up UI. Replace the links to those routes with the [`<SignInButton>`](/docs/components/unstyled/sign-in-button) or [`<SignUpButton>`](/docs/components/unstyled/sign-out-button) components.
 
 #### Self-hosted UI
 
@@ -154,9 +154,9 @@ For fully custom UI, replace the existing functionality with [appropriate custom
 
 #### Middleware
 
-You will need to remove the NextAuth.js Middleware from your application, and replace it with the Clerk Middleware helper. NextAuth's middleware always rejects unauthorized requests. You may have additionally configured the Next.js middleware config to protect specific private routes. You will need to make note of this configuration so you can recreate it.
+You will need to remove the Auth.js Middleware from your application, and replace it with the Clerk Middleware helper. Auth's middleware always rejects unauthorized requests. You may have additionally configured the Next.js middleware config to protect specific private routes. You will need to make note of this configuration so you can recreate it.
 
-1. Remove the NextAuth.js Middleware
+1. Remove the Auth.js Middleware
 
 ```tsx filename="middleware.ts"
 export { default } from "next-auth/middleware"
@@ -254,7 +254,7 @@ export async function getServerSideProps(context) {
 
 #### Client Side
 
-Replace NextAuth's `useSession` with Clerk's hooks.
+Replace Auth's `useSession` with Clerk's hooks.
 
 ```tsx filename="app/page.tsx"
 'use client'
@@ -293,7 +293,7 @@ When you migrate to Clerk, you will likely need to resolve the foreign key that 
 
 #### Use Clerk's `externalId` field
 
-When you migrate user data from NextAuth's database to Clerk, Clerk generates new user IDs for each user. If you are using existing user IDs as foreign keys in your database (e.g. in a `user_id` column), you can save those IDs as the user's `externalId` in Clerk. This `externalId` can be included in the session token by adding the following [customization](/docs/backend-requests/making/custom-session-token). The following example will return the `externalId` if one is present, and if not will return the Clerk `userId`.
+When you migrate user data from Auth's database to Clerk, Clerk generates new user IDs for each user. If you are using existing user IDs as foreign keys in your database (e.g. in a `user_id` column), you can save those IDs as the user's `externalId` in Clerk. This `externalId` can be included in the session token by adding the following [customization](/docs/backend-requests/making/custom-session-token). The following example will return the `externalId` if one is present, and if not will return the Clerk `userId`.
 
 ```json
 {
@@ -355,7 +355,7 @@ To retain the user data in your database for easy querying, check out the docume
   }
 ]
 ```
-4. If you already have an API endpoint in your NextAuth.js app that returns a list of users you could use that. Otherwise you will need to query your database to obtain the user information, or use an export function from a database management tool.
+4. If you already have an API endpoint in your Auth.js app that returns a list of users you could use that. Otherwise you will need to query your database to obtain the user information, or use an export function from a database management tool.
     
 ```sql
   SELECT id as userId, email, name FROM users
@@ -368,6 +368,6 @@ To retain the user data in your database for easy querying, check out the docume
 
 ### Further Support
 
-This guide covers the most common steps that you would take for the migration. If you have more complex integrations with NextAuth that are not covered here, don't hesitate to hop into the Clerk discord and open a support question.
+This guide covers the most common steps that you would take for the migration. If you have more complex integrations with Auth that are not covered here, don't hesitate to hop into the Clerk discord and open a support question.
 
 </Steps>
