--- a/docs/guides/authjs-migration.mdx
+++ b/docs/guides/authjs-migration.mdx
@@ -25,7 +25,7 @@ description: Migrating from Auth.js
 - Install `@clerk/nextjs`
 - Set environment keys
 - Wrap your Next.js app in `<ClerkProvider />`
-- Setup Sign-up and Sign-in UI
+- Set up sign-up and sign-in UI
 - Protect your app
 - Read user and session data
 - User IDs as Foreign Keys
