--- a/docs/guides/authjs-migration.mdx
+++ b/docs/guides/authjs-migration.mdx
@@ -60,7 +60,9 @@ pnpm add @clerk/nextjs
 
 ### Set environment keys
 
-Store the keys in the `.env.local` file of your Next.js application.
+Add the following code to your `.env.local` file to set your public and secret keys.
+
+Pro tip! If you are signed into your [Clerk Dashboard](https://dashboard.clerk.com/last-active?path=api-keys), your secret key should become visible by clicking on the eye icon.
 
 <InjectKeys>
 
