--- a/docs/guides/authjs-migration.mdx
+++ b/docs/guides/authjs-migration.mdx
@@ -75,30 +75,7 @@ CLERK_SECRET_KEY={{secret}}
 
 ### Wrap your Next.js app in `<ClerkProvider />`
 
-You will remove the provider from Auth.js and replace it with the `<ClerkProvider />` provider from Clerk. This will need to wrap your application, or wrap the portion of your app where you want to handle authenication. 
-
-1. Remove your Auth.js `<SessionProvider />`
-
-Replace `<SessionProvider session={session}>` with `<ClerkProvider>` if you are using App Router or `<ClerkProvider {...pageProps}>` if you are using Pages Router.
-
-```tsx filename="_app.tsx"
-// With Auth.js
-
-import { SessionProvider } from "next-auth/react"
-
-export default function App({
-  Component,
-  pageProps: { session, ...pageProps },
-}) {
-  return (
-    <SessionProvider session={session}>
-      <Component {...pageProps} />
-    </SessionProvider>
-  )
-}
-```
-
-2.  Add `<ClerkProvider />` to your root `layout.tsx` file
+You will need to remove the `<SessionProvider session={session}>` provider from Auth.js and replace it with the `<ClerkProvider />` provider from Clerk. `<ClerkProvider />` will need to wrap your application, or wrap the portion of your app where you want to handle authentication. 
 
 <CodeBlockTabs type="installer" options={["App Router", "Pages Router"]}>
 
