--- a/docs/guides/authjs-migration.mdx
+++ b/docs/guides/authjs-migration.mdx
@@ -123,11 +123,11 @@ To use the Account Portal, remove the routes that mount the Auth.js sign-in and 
 
 #### Self-hosted UI
 
-If you want sign-in and sign-up pages in your own application, you can use [Clerk's pre-built components](/docs/references/nextjs/custom-signup-signin-pages), or implement the UI yourself using [Clerk's hooks](/docs/custom-flows/overview).
+If Clerk's Account Portal pages aren't a good fit your app, you can build a custom sign-in and sign-up UI in one of two ways:
 
-#### Custom UI
+- use Clerk's [pre-built components](/docs/references/nextjs/custom-signup-signin-pages), such as the [`<SignIn />`](/docs/components/authentication/sign-in) and [`<SignUp />`](/docs/components/authentication/sign-up) components
+- build a [fully custom UI using Clerk's API](/docs/custom-flows/overview), leveraging Clerk's React hooks such as [`useSignIn()`](/docs/references/react/use-sign-in) and [`useSignUp()`](/docs/references/react/use-sign-up)
 
-For fully custom UI, replace the existing functionality with [appropriate custom flows](/docs/custom-flows/overview#custom-flows). With Custom flows, you leverage Clerk's React hooks `useSignIn` and `useSignUp` to build fully custom UI that handles authentication with email and password, OAuth, magic links, OTP or any other authentication option Clerk offers.
 
 ### Protect your app
 
