--- a/docs/guides/authjs-migration.mdx
+++ b/docs/guides/authjs-migration.mdx
@@ -1,6 +1,6 @@
 ---
-title: Migrating to Clerk from Auth.js
-description: Migrating from Auth.js
+title: Migrate from Auth.js to Clerk
+description: Learn how to migrate an application using Auth.js to use Clerk for authentication.
 ---
 
 <TutorialHero
