--- a/docs/guides/authjs-migration.mdx
+++ b/docs/guides/authjs-migration.mdx
@@ -133,7 +133,7 @@ If Clerk's Account Portal pages aren't a good fit your app, you can build a cust
 
 #### Middleware
 
-You will need to remove the Auth.js Middleware from your application, and replace it with the Clerk Middleware helper. Auth's middleware always rejects unauthorized requests. You may have additionally configured the Next.js middleware config to protect specific private routes. You will need to make note of this configuration so you can recreate it.
+You will need to remove the Auth.js Middleware from your application, and replace it with the Clerk Middleware helper. Auth.js's middleware always rejects unauthorized requests. You may have additionally configured the Next.js middleware config to protect specific private routes. You will need to make note of this configuration so you can recreate it.
 
 1. Remove the Auth.js Middleware
 
