--- a/docs/guides/authjs-migration.mdx
+++ b/docs/guides/authjs-migration.mdx
@@ -31,7 +31,7 @@ description: Learn how to migrate an application using Auth.js to use Clerk for 
 - User IDs as Foreign Keys
 - Create a production instance
 - Migrate users to a production instance
-- Further support
+- Find further support
 
 </TutorialHero>
 
