--- a/docs/guides/authjs-migration.mdx
+++ b/docs/guides/authjs-migration.mdx
@@ -133,7 +133,7 @@ If Clerk's Account Portal pages aren't a good fit your app, you can build a cust
 
 With Clerk, you can control access to your application in a few different ways. One way is to use Clerk's Middleware to protect your entire application, or specific routes. Another way is to use Clerk's components to conditionally render UI based on the user's authentication state. You can hide or show UI based on whether the user is signed in or not.
 
-#### Middleware
+#### Control access to your app with Clerk Middleware
 
 You will need to remove the Auth.js Middleware from your application, and replace it with the Clerk Middleware helper. Auth.js's middleware always rejects unauthorized requests. You may have additionally configured the Next.js middleware config to protect specific private routes. You will need to make note of this configuration so you can recreate it.
 
