--- a/docs/guides/authjs-migration.mdx
+++ b/docs/guides/authjs-migration.mdx
@@ -35,6 +35,8 @@ description: Learn how to migrate an application using Auth.js to use Clerk for 
 
 </TutorialHero>
 
+## Introduction
+
 This guide shows how to migrate an application using Auth.js (formerly NextAuth.js) to use Clerk for authentication.
 
 <Steps>
