--- a/docs/guides/authjs-migration.mdx
+++ b/docs/guides/authjs-migration.mdx
@@ -139,14 +139,7 @@ With Clerk, you can control access to your application in a few different ways. 
 
 You will need to remove the Auth.js Middleware from your application, and replace it with the Clerk Middleware helper. Auth.js's middleware always rejects unauthorized requests. You may have additionally configured the Next.js middleware config to protect specific private routes. You will need to make note of this configuration so you can recreate it.
 
-1. Remove the Auth.js Middleware
-
-```tsx filename="middleware.ts"
-export { default } from "next-auth/middleware"
-
-export const config = { matcher: [/** private routes */] }
-```
-2. Add Clerk's `authMiddleware()`
+Remove the Auth.js Middleware and replace it with Clerk's `authMiddleware()`.
 
 The example below is the starting Middleware configuration. Please read the [`authMiddleware()`](/docs/references/nextjs/auth-middleware) documentation to learn how to configuration your Middleware. Clerk's Middleware will, by default, run for your entire application and gives you fine-grained control over handling the authenticated state. 
 
