--- a/docs/guides/authjs-migration.mdx
+++ b/docs/guides/authjs-migration.mdx
@@ -156,7 +156,7 @@ export const config = {
 };
 ```
 
-3. Use Clerk's control components to control access
+3. Control access to your app with Clerk's components
 
 To conditionally render UI when the user is signed in, wrap it with [`<SignedIn>`](/docs/components/control/signed-in).
 
